# source-engine

./: .gitignore  .gitmodules  README.md  build-android32.sh  build-androidarm32.sh  build.nix  build.sh  build_waf.sh  createallprojects  createallprojects-android32  createallprojects-androidarm32  createallprojects.bat  creategameprojects.bat  filelist2013.txt  flake.nix  header-list.txt  hl2-unwrapped.nix  hl2-wrapper.nix  output  shell.nix  waf  wafandroid  wscript
appframework/: AppSystemGroup.cpp  VguiMatSysApp.cpp  WinApp.cpp  appframework.vpc  glmdisplaydb_linuxwin.inl  glmrendererinfo_osx.mm  posixapp.cpp  sdlmgr.cpp  wscript
bitmap/: ImageByteSwap.cpp  bitmap.cpp  bitmap.vpc  colorconversion.cpp  float_bm.cpp  float_bm2.cpp  float_bm3.cpp  float_bm4.cpp  float_bm_bilateral_filter.cpp  float_cube.cpp  imageformat.cpp  psd.cpp  resample.cpp  tgaloader.cpp  tgawriter.cpp  wscript
choreoobjects/: wscript
common/: ClientNetMessage.cpp  ClientNetMessage.h  ConfigManager.cpp  ConfigManager.h  FindSteamServers.h  IAdminServer.h  IFileSystemOpenDialog.h  IManageServer.h  IObjectContainer.h  IRunGameEngine.h  IVGuiModuleLoader.h  IVguiModule.h  SourceAppInfo.cpp  SourceAppInfo.h  SteamAppStartup.cpp  SteamAppStartup.h  SteamBootStrapper.h  Steamlib.h  Steamlib_null.h  ValidateNewValveCDKeyClient.h  ValveCDKeyGameAndTerritoryCodes.h  crypto.cpp  crypto.h  cserserverprotocol_engine.h  cstringhash.h  debug_dll_check.cpp  debug_lib_check.cpp  engine_launcher_api.h  hl2orange.spa  hl2orange.xlast  hl2orange.xml  iappinformation.h  iconv.h  igameserverdata.h  imageloadwrapper.cpp  imageloadwrapper.h  imageutils.cpp  imageutils.h  info_key.cpp  info_key.h  (+26 more)
datacache/: datacache.cpp  datacache.h  datacache.vpc  datacache_common.h  mdlcache.cpp  wscript
datamodel/: DmElementFramework.cpp  DmElementFramework.h  clipboardmanager.cpp  clipboardmanager.h  datamodel.cpp  datamodel.h  datamodel.vpc  dependencygraph.cpp  dependencygraph.h  dmattribute.cpp  dmattributeinternal.h  dmelement.cpp  dmelementdictionary.cpp  dmelementdictionary.h  dmelementfactoryhelper.cpp  dmserializerbinary.cpp  dmserializerbinary.h  dmserializerkeyvalues.cpp  dmserializerkeyvalues.h  dmserializerkeyvalues2.cpp  dmserializerkeyvalues2.h  undomanager.cpp  undomanager.h  wscript
dedicated/: dedicated.h  dedicated.vpc  filesystem.cpp  isys.h  resource.h  sys_common.cpp  sys_ded.cpp  sys_linux.cpp  sys_windows.cpp  wscript
dedicated_main/: dedicated_main.rc  dedicated_main.vpc  main.cpp  resource.h  wscript
devtools/: AddFunctionPrologue.py  CheckSurfaceProps.py  DisableAppVerifier.bat  DisableSrcdsAppVerifier.bat  EnableAppVerifier.bat  EnableSrcdsAppVerifier.bat  FindClasses.py  GDPerf.sys  PME.reg  PMELib.htm  WildcardSearch.py  base.xcconfig  build_solution_remote.py  dlexer.py  fix_tlog.py  fix_tlogs.bat  makefile_base_posix.mak  makemissinganims.pl  mat_check.pl  matcheck_dod.bat  p4EditChangelist.py  p4debugscan.py  p4helpers.py  p4sizes.py  p4submit.py  parse_analyze_errors.py  search_and_replace_template.py  shotmaker.pl  sourcesdk_def.mak  srcdsAppVerifierSettings.reg  steam_def.mak  tf2AppVerifierSettings.reg  vcodepickle.py
dmserializers/: dmebaseimporter.cpp  dmebaseimporter.h  dmserializers.cpp  dmserializers.h  dmserializers.vpc  importactbusy.cpp  importkeyvaluebase.cpp  importkeyvaluebase.h  importsfmv1.cpp  importsfmv2.cpp  importsfmv3.cpp  importsfmv4.cpp  importsfmv5.cpp  importsfmv6.cpp  importsfmv7.cpp  importsfmv8.cpp  importsfmv9.cpp  importvmf.cpp  importvmt.cpp
dmxloader/: dmxattribute.cpp  dmxelement.cpp  dmxloader.cpp  dmxloader.vpc  dmxloadertext.cpp  dmxserializationdictionary.cpp  dmxserializationdictionary.h  wscript
engine/: DevShotGenerator.cpp  DevShotGenerator.h  DownloadListGenerator.cpp  DownloadListGenerator.h  EngineSoundClient.cpp  EngineSoundInternal.h  EngineSoundServer.cpp  GameEventManager.cpp  GameEventManager.h  GameEventManagerOld.cpp  IOcclusionSystem.h  LoadScreenUpdate.cpp  LoadScreenUpdate.h  LocalNetworkBackdoor.cpp  LocalNetworkBackdoor.h  MapReslistGenerator.cpp  MapReslistGenerator.h  MaterialBuckets.h  ModelInfo.cpp  ModelInfo.h  NetworkStringTableItem.cpp  OcclusionSystem.cpp  Overlay.cpp  Overlay.h  SVConnectionlessHandler.h  Session.cpp  Session.h  baseautocompletefilelist.cpp  baseautocompletefilelist.h  baseclient.cpp  baseclient.h  baseclientstate.cpp  baseclientstate.h  baseserver.cpp  baseserver.h  bitbuf_errorhandler.cpp  bitbuf_errorhandler.h  bugreporter.cpp  buildcubemaps.cpp  cbenchmark.cpp  (+397 more)
fgdlib/: gamedata.cpp  gdclass.cpp  gdvar.cpp  inputoutput.cpp  wckeyvalues.cpp  wscript
filesystem/: QueuedLoader.cpp  basefilesystem.cpp  basefilesystem.h  (+12 more)
game/client/third/minizip/: CMakeLists.txt  Minizip.podspec  README.md  minizip.c  minizip.pc.cmakein  mz.h  mz_compat.c  mz_compat.h  mz_os.c  mz_os.h  mz_os_posix.c  mz_os_posix.h  mz_os_win32.c  mz_os_win32.h  mz_strm.c  mz_strm.h  mz_strm_aes.c  mz_strm_aes.h  mz_strm_buf.c  mz_strm_buf.h  mz_strm_bzip.c  mz_strm_bzip.h  mz_strm_lzma.c  mz_strm_lzma.h  mz_strm_mem.c  mz_strm_mem.h  mz_strm_pkcrypt.c  mz_strm_pkcrypt.h  mz_strm_posix.c  mz_strm_posix.h  mz_strm_split.c  mz_strm_split.h  mz_strm_win32.c  mz_strm_win32.h  mz_strm_zlib.c  mz_strm_zlib.h  mz_zip.c  mz_zip.h
game/client/third/minizip/lib/aes/: pwd2key.c
game/client/third/minizip/lib/bzip2/: compress.c
game/client/third/minizip/lib/liblzma/: config.h
game/client/third/minizip/lib/liblzma/api/: lzma.h
game/client/third/minizip/lib/liblzma/check/: check.h
game/client/third/minizip/lib/liblzma/common/: alone_decoder.c  alone_encoder.c  filter_encoder.c  sysdefs.h  tuklib_integer.h
game/client/third/minizip/test/: test.c  test.h  test.py
vscript/: CMakeLists.txt  vscript.cpp  vscript.vpc  vscript_squirrel.nut  wscript
vscript/_vpc_/manifest_vscript/linux64/: manifest.txt
vscript/languages/gm/scripts/: Bomber.gm
vscript/languages/python/python-2.5.1/win32release/: python25.lib  python25v.lib
vscript/languages/squirrel/sqplus/: sqplus.h
vscript/languages/squirrel/vsquirrel/: init_nut.h  vsquirrel.cpp
(+9294 files in other folders)
